exports[`align center`] = `
<div
  data-css-jxj2iv="*"
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20
      }
    } />
</div>
`;

exports[`justify align center`] = `
<div
  data-css-r0eprg="*"
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20
      }
    } />
</div>
`;

exports[`justify center`] = `
<div
  data-css-h4m9r1="*"
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20
      }
    } />
</div>
`;

exports[`with children`] = `
<div
  data-css-1kwp6t6="*"
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20
      }
    } />
</div>
`;
